welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:3: error: illegal start of simple expression
	if ( candy == 2* tea || tea == 2*candy ) ) {
                                                 ^